--- a/src/routes/start/index@article.mdx
+++ b/src/routes/start/index@article.mdx
@@ -1,4 +1,20 @@
 ---
-title: getting started
+title: >
+    QC: Getting Started
+pagetitle: Getting Started
 ---
 
+This page is here to help you figure out where to go.  If you already know what you want to learn, great!  Head on over to whatever path you're looking for: 
+
+- [JavaScript](/js)
+- [React](/react)
+- [Python](/python)
+- ~~[DevOps](/devops)~~
+- ~~[InfoSec](/infosec)~~
+- ~~[System Administration](/sysadmin)~~
+- ~~[Another Thing](/)~~
+- ~~[Even More Thing](/)~~
+
+If you don't know what you want to learn, check [this page](/languages) out, it kinda goes through the core paths and explains what they mean and will hopefully help you get a sense for what you'd like to learn.  
+
+If you really have no idea, and you just want to do the best thing, learn [JavaScript](/js).  It's not the best language on earth, but it's the most commonly used, and would be the easiest way to get started.  
